--- a/package.json
+++ b/package.json
@@ -1,35 +1,22 @@
 {
   "name": "xml-formatter",
-  "version": "2.4.1",
-  "repository": "github:chrisbottin/xml-formatter",
-  "bugs": {
-    "url": "https://github.com/chrisbottin/xml-formatter/issues"
-  },
-  "homepage": "https://github.com/chrisbottin/xml-formatter#readme",
-  "description": "Converts a XML string into a human readable format (pretty print) while respecting the xml:space attribute",
-  "author": "Chris Bottin <chrisbottin@gmail.com>",
+  "version": "0.0.1",
   "license": "MIT",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha",
-    "prepublishOnly": "eslint . && npm test && npm run dist:prepare && npm run dist:build",
-    "dist:prepare": "rm -rf ./dist && mkdir -p ./dist/browser",
-    "dist:build": "browserify -r ./index.js:xml-formatter -o ./dist/browser/xml-formatter.js"
+  "author": "mazaaxi",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mazaaxi/xml-formatter.git"
   },
   "engines": {
     "node": ">= 10"
   },
-  "keywords": [
-    "xml",
-    "pretty",
-    "print",
-    "pretty-print",
-    "indent",
-    "parser",
-    "formatter",
-    "xml:space",
-    "preserve"
-  ],
+  "main": "./index.js",
+  "types": "./index.d.ts",
+  "scripts": {
+    "test": "mocha",
+    "lint": "eslint ./"
+  },
   "dependencies": {
     "xml-parser-xo": "^3.1.2"
   },
